<?xml version="1.0"?>
<package format="3">
  <name>clock_motor</name>
  <version>0.0.1</version>
  <description>Python ROS2 nodes for a motor driven clock hand.</description>
  <maintainer email="student@example.com">student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>clock_interfaces</exec_depend>
</package>
